# zpr-projekt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.app  Dockerfile.test  Doxyfile  README.md
.github/workflows/: multi-platform-cmake.yml  ubuntu-build.yml
docs/: Dokumentacja użytkownika.md  create-coverage.sh  dokumentacja-koncowa.md  dokumentacja-wstepna.md  doxygen.md  model-samochodu.md  test_coverage.md  uruchomienie-docker.md
docs/diagrams/: app.puml  common.puml  evolution-crossover.puml  evolution-mutation.puml  evolution-reproduction.puml  evolution-succession.puml  evolution.puml  packages.puml  road.puml  simulation.puml
docs/doxygen/: dconfig
src/: Docs.h  docs.h  main.cpp
src/app/: BestCarParamsPanel.cc  BestCarParamsPanel.h  CMakeLists.txt  ConfigurationPanel.cc  ConfigurationPanel.h  ControlPanel.cpp  ControlPanel.h  DebugInfoPanel.cpp  DebugInfoPanel.h  Docs.h  EvolutionManager.cc  EvolutionManager.h  EvolutionManagerFactory.cc  EvolutionManagerFactory.h  FitnessFunction.cc  FitnessFunction.h  GuiControls.cc  GuiControls.h  Main.cc  SimulationsManager.cc  SimulationsManager.h  VisualisationUtils.cc  VisualisationUtils.h  Window.cc  Window.h  main.cc
src/common/: CMakeLists.txt  CarDescription.cc  CarDescription.h  Docs.h  Position.cc  Position.h
src/evolution/: CMakeLists.txt  Docs.h  Evolution.cc  Evolution.h  GaussianMutationScheme.cc  GaussianMutationScheme.h  MutationScheme.cc  MutationScheme.h  Specimen.cc  Specimen.h
src/evolution/crossover/: CrossoverScheme.cc  CrossoverScheme.h  CrossoverSchemeFactory.cc  CrossoverSchemeFactory.cpp  CrossoverSchemeFactory.h  NoCrossoverScheme.cc  NoCrossoverScheme.h  TwoPointCrossoverScheme.cc  TwoPointCrossoverScheme.cpp  TwoPointCrossoverScheme.h
src/evolution/mutation/: GaussianMutationScheme.cc  GaussianMutationScheme.h  MutationScheme.cc  MutationScheme.h  MutationSchemeFactory.cc  MutationSchemeFactory.h  NoMutationScheme.cc  NoMutationScheme.h
src/evolution/reproduction/: ProportionalReproductionScheme.cc  ProportionalReproductionScheme.h  RandomReproductionScheme.cc  RandomReproductionScheme.h  ReproductionScheme.cc  ReproductionScheme.h  ReproductionSchemeFactory.cc  ReproductionSchemeFactory.cpp  ReproductionSchemeFactory.h  TournamentReproductionScheme.cc  TournamentReproductionScheme.cpp  TournamentReproductionScheme.h
src/evolution/succession/: ElitistSuccessionScheme.cc  ElitistSuccessionScheme.h  GenerationSuccessionScheme.cc  GenerationSuccessionScheme.h  SuccessionScheme.cc  SuccessionScheme.h  SuccessionSchemeFactory.cc  SuccessionSchemeFactory.h
src/road/: CMakeLists.txt  Docs.h  GenericRoadGenerator.h  PerlinRoadGenerator.cc  PerlinRoadGenerator.cpp  PerlinRoadGenerator.h  Road.cc  Road.h  RoadGenerator.h  RoadStatic.cpp  RoadStatic.h  StaticRoadGenerator.cc  StaticRoadGenerator.cpp  StaticRoadGenerator.h
src/simulation/: BoxesSimulation.cc  BoxesSimulation.h  CMakeLists.txt  CarBody.cc  CarBody.h  CarChassis.cc  CarChassis.h  CarDescription.cc  CarDescription.h  CarSimulation.cc  CarSimulation.h  CircleRot.h  Docs.h  Rect.h  RectRot.h  Rectangle.cc  Rectangle.h  RoadConverter.cpp  RoadConverter.h  RoadModel.cpp  RoadModel.h  Simulation.cc  Simulation.h  Size.h  TriangleRot.cc  TriangleRot.h  Utils.cc  Utils.h
src/tests/app/: CMakeLists.txt  ControlPanelUnitTest.cc  EvolutionManagerUnitTest.cc  FitnessFunctionUnitTest.cc  SimulationsManagerUnitTests.cc  TestUtils.cc  TestUtils.h
src/tests/common/: CMakeLists.txt  CarDescriptionUnitTest.cc  PositionUnitTest.cc
src/tests/evolution/: CMakeLists.txt  EvolutionUnitTest.cc  GaussianMutationSchemeUnitTest.cc  SpecimenUnitTest.cc  TestUtils.cc  TestUtils.h
src/tests/evolution/crossover/: NoCrossoverSchemeUnitTest.cc  TwoPointCrossoverSchemeUnitTest.cc  TwoPointCrossoverSchemeUnitTest.cpp
src/tests/evolution/mutation/: GaussianMutationSchemeUnitTest.cc
src/tests/evolution/reproduction/: ProportionalReproductionSchemeUnitTest.cc  RandomReproductionSchemeUnitTests.cc  TournamentReproductionSchemeUnitTest.cc
src/tests/evolution/succession/: ElitistSuccessionUnitTest.cc  GenerationSuccessionUnitTest.cc
src/tests/road/: CMakeLists.txt  PerlinRoadGeneratorUnitTest.cc  RoadTest.cc  RoadUnitTest.cc  StaticRoadGeneratorTest.cc  StaticRoadGeneratorUnitTest.cc  Test.cc
src/tests/simulation/: CMakeLists.txt  CarBodyTest.cc  CarChassisTest.cc  CarSimulationUnitTest.cc  RectangleTest.cc  RoadModelUnitTest.cc  SimulationUnitTest.cc  UtilsUnitTest.cc
src/visualisation/: CMakeLists.txt  Docs.h  VisualisationUtils.cc  VisualisationUtils.h
